<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/input_answer_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/secret_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="Cuál es el segundo nombre de mi padre?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/secret_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="text"
        android:maxLength="20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_secret_answer" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/submit" />
</LinearLayout>
