<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/new_password_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:maxLength="20"
        android:id="@+id/new_password" />

    <TextView
        android:id="@+id/new_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F00"/>

    <TextView
        android:text="@string/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:maxLength="20"
        android:id="@+id/repeated_new_password" />

    <TextView
        android:id="@+id/repeated_new_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F00"/>

    <TextView
        android:text="@string/secret_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secret_questions" />

    <TextView
        android:text="@string/secret_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="text"
        android:maxLength="20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_secret_answer" />
    <TextView
        android:id="@+id/new_secret_answer_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F00"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/submit" />
</LinearLayout>
